infrastructure/k8s/05-fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi-container
          image: "docker.io/a0533057932/data-loader-service:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
