infrastructure/k8s/04-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-service
  labels:
    app: mysql-db
spec:
  selector:
    app: mysql-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
