infrastructure/k8s/07-fastapi-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fastapi-route
spec:
  to:
    kind: Service
    name: fastapi-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
